trustfall_core/test_data/tests/parse_errors/transform_first_directive.parse-error.ron
Err(UnsupportedDirectivePosition("@transform", "Cannot transform an edge prior to a @fold directive. Consider adding @fold before the @transform here.", Pos(
  line: 4,
  column: 36,
)))
